fix: 🐛 修复日志记录线程崩溃造成的闪退问题